<resources>
    <string name="app_name">Login-Register-Screen-UI</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register Here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email" >Email</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="welcome">Welcome</string>
    <string name="create_a_new_account">Create A New Account</string>

</resources>